--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-<html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=1920px,initial-scale=1"><link rel="shortcut icon" type="image/x-icon" href="/discord-splitter/favicon.ico?"><meta http-equiv="X-UA-Compatible" content="ie=edge"><title>Discord Wall of Text Splitter</title></head><body><h3>Discord Wall of Text Splitter</h3><p>Put your wall of text here</p><div><textarea id="the_box" cols="120" scrollbar="true" rows="25" style="font-family:Monaco,'Lucida Sans','Lucida Sans Regular','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,sans-serif;font-size:14pt"></textarea></div><button id="the_but" onclick="split_it()" style="background-color:#599bb3;border-radius:5px;border:1px solid #29668f;display:inline-block;cursor:pointer;color:#fff;font-family:Arial;font-size:15px;font-weight:700;padding:11px 23px">SPLIT ME</button><div id="splitted"></div></body><script>let text=document.getElementById('the_box'),contents=null,num_splits=0,results=document.getElementById('splitted');function split_it(){contents=text.value,num_splits=Math.ceil(contents.length/1990);let a=0,b=0,c=0;for(results.innerHTML='<h3> Your text was split into '+num_splits+' sections:';num_splits!=a;)b=contents.lastIndexOf(' ',1990*++a),results.innerHTML+='<p>'+contents.substring(c,b)+'</p>',c=b+1}</script></html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Boba Life</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <header class="header">
+        <h1>My Life is Just Like a Boba! 🥤</h1>
+    </header>
+
+    <section id="intro" class="section">
+        <h2>Life’s Got Its Layers</h2>
+        <p>Life’s got its layers, its surprises, and its sweetness—just like a boba tea. You’ve got the tea that keeps you grounded, the milk that makes things smoother, and the pearls that add that little extra…something. Just like sipping on boba, life can be unpredictable, but it’s always worth enjoying each part, one sip at a time.</p>
+    </section>
+
+    <section id="layers" class="section">
+        <h2>Life’s Layers</h2>
+        <p>Just like a perfect boba, life is made up of layers. There’s the tea—your experiences and memories, deep and sometimes bitter, but they keep you going. Then comes the milk—those sweet, comforting moments that balance everything out, softening the edges. And finally, the pearls—the little surprises that keep things interesting, unpredictable, and sometimes a bit chewy. Each layer adds its own flavor, and together, they make life richer.</p>
+    </section>
+
+    <section id="bubble-up" class="section">
+        <h2>Bubble Up</h2>
+        <p>In life, just like in a boba drink, there are moments that float up unexpectedly—little joys, laughs, and memories that lift you. These “bubbles” remind you to keep going, to celebrate the small wins, and to find sweetness in everyday moments. So, keep bubbling up, and let yourself savor each surprise as it comes. Every sip has something new to discover.</p>
+    </section>
+
+    <section id="sip-slowly" class="section">
+        <h2>Sip Slowly</h2>
+        <p>Life, like a good boba, isn’t meant to be rushed. It’s about savoring every sip, every moment, every pearl along the way. Slow down, take it all in, and let the sweetness linger a bit longer. The best experiences aren’t the ones you gulp down—they’re the ones you enjoy, one moment at a time.</p>
+    </section>
+
+    <section id="sip-smile-repeat" class="section">
+        <h2>Sip, Smile, Repeat</h2>
+        <p>Life’s a lot like a boba drink—full of layers, surprises, and little bursts of sweetness. So take it one sip at a time, smile through the unexpected, and enjoy every pearl that comes your way. Because just like a good boba, life’s best enjoyed slowly and with a little laughter along the way.</p>
+        <h3>Here’s to savoring each sip!</h3>
+    </section>
+
+    <footer class="footer">
+        <p>Created with <span>&#x2661;</span> by Boba Lover - Abhay</p>
+    </footer>
+
+    <div id="bubble-container">
+        <div class="bubble x1"></div>
+        <div class="bubble x2"></div>
+        <div class="bubble x3"></div>
+        <div class="bubble x4"></div>
+        <div class="bubble x5"></div>
+        <div class="bubble x6"></div>
+        <div class="bubble x7"></div>
+        <div class="bubble x8"></div>
+        <div class="bubble x9"></div>
+        <div class="bubble x10"></div>
+    </div>
+</body>
+</html>
